letter spacing fixxxed

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -67,7 +67,7 @@ body {
 h2 {
 	color: #ffffff;
 	font-size: 80px;
-	letter-spacing: 5px;
+	letter-spacing: 15px;
 }
 
 
